# travel-agent

./: .gitignore  CHANGELOG.md  README.md  agents.py  app.py  app1.py  flights.py  hotel_search.py  hotel_tool.py  new.md  pyproject.toml  reddit_agent.py  reddit_post_scraper.py  reddit_scraper.py  reddit_scraper_rapid.py  reddit_search.py  requirements.txt  search.py  test.py  tools.py  utils.py
agent_utils/: agents.py  tools.py
data/: google-hotels-amenities.json  google-hotels-property-types.json
db/: chroma.sqlite3
prompts/: agent_prompts.yaml  chat_prompts.yaml
utils/: reddit_utils.py  utils.py
